--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "js-base64": "^2.5.2",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
   },
